# noshell

./: .gitignore  CHANGELOG  Cargo.toml  Justfile  README.md  flake.nix  release-plz.toml
noshell/: Cargo.toml
noshell-macros/: Cargo.toml
noshell-macros/src/: arg.rs  attr.rs  derive.rs  lib.rs  ty.rs
noshell-parser/: Cargo.toml
noshell-parser/examples/: struct.rs
noshell-parser/src/: lexer.rs  lib.rs  parser.rs  utils.rs
noshell/src/: lib.rs
src/: lexer.rs  parser.rs
