[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [ "Julien Peeters <inthehack@mountainhacks.org>" ]
license = "APACHE-2.0 OR MIT"
homepage = "https://github.com/inthehack/noshell"
repository = "https://github.com/inthehack/noshell"
description = "noshell, a no_std argument parser and a shell for constrained systems."

[workspace]
resolver = "2"
members = [ "noshell-parser", "noshell-macros" , "noshell" ]

[workspace.dependencies]
defmt = { version = "0.3.10", default-features = false }
thiserror = { version = "2.0.11", default-features = false }

googletest = "0.13.0"
