[package]
name = "noshell-macros"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.97"
