[package]
name = "noshell"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
noshell-macros = { path = "../noshell-macros", version = "0.1.0" }
noshell-parser = { path = "../noshell-parser", version = "0.1.0" }

defmt = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []

defmt = ["dep:defmt", "noshell-parser/defmt"]

[dev-dependencies]
googletest.workspace = true
