[package]
name = "noshell"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[features]
default = []
defmt = ["dep:defmt", "noshell-parser/defmt"]

[dependencies]
defmt = { workspace = true, optional = true }
heapless = { workspace = true }
thiserror = { workspace = true }

noshell-macros = { path = "../noshell-macros", version = "0.2.0" }
noshell-parser = { path = "../noshell-parser", version = "0.2.0" }

[dev-dependencies]
googletest = { workspace = true }
